# qaekwy-python

./: README.md  TERMS.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
qaekwy/: __init__.py  __main__.py  __metadata__.py  engine.py  explanation.py  response.py  solution.py
qaekwy/api/: exceptions.py  model.py
qaekwy/core/: __init__.py  engine.py  explanation.py  response.py  solution.py
qaekwy/core/exception/: model_failure.py
qaekwy/core/model/: cutoff.py  function.py  modeller.py  searcher.py  specific.py
qaekwy/core/model/constraint/: abs.py  acos.py  asin.py  atan.py  cos.py  distinct.py  divide.py  element.py  exponential.py  if_then_else.py  logarithm.py  maximum.py  member.py  minimum.py  modulo.py  multiply.py  nroot.py  power.py  relational.py  sin.py  sort.py  tan.py
qaekwy/core/model/variable/: boolean.py  float.py  integer.py  variable.py
qaekwy/model/: __init__.py  cutoff.py  function.py  modeller.py  relation.py  searcher.py  specific.py
qaekwy/model/constraint/: abs.py  abstract_constraint.py  acos.py  asin.py  atan.py  cos.py  distinct.py  divide.py  element.py  exponential.py  if_then_else.py  logarithm.py  maximum.py  member.py  minimum.py  modulo.py  multiply.py  nroot.py  power.py  relational.py  sin.py  sort.py  tan.py
qaekwy/model/variable/: boolean.py  branch.py  float.py  integer.py  variable.py
tests/: test_explanation.py  test_solution.py
tests/api/: test_model.py
tests/core/: test_explanation.py  test_response.py  test_solution.py
tests/core/model/: test_cutoff.py  test_function.py  test_modeller.py
tests/core/model/constraint/: test_acos.py  test_asin.py  test_distinct.py  test_divide.py  test_if_then_else.py  test_logarithm.py  test_maximum.py  test_minimum.py  (+4 more)
tests/model/: test_modeller.py
tests/model/constraint/: test_abs.py  test_acos.py  test_asin.py  test_atan.py  test_cos.py  test_distinct.py  test_divide.py  test_element.py  test_exponential.py  test_if_then_else.py  test_logarithm.py  test_maximum.py  test_member.py  test_minimum.py  test_modulo.py  test_multiply.py  test_nroot.py  test_power.py  test_relational.py  test_sin.py  test_sort.py  test_tan.py
tests/model/variable/: test_expression.py  test_integer.py
(+3 files in other folders)
