[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qaekwy"
dynamic = ["version"]
description = "Qaekwy, a modern, open-source Python framework for declarative constraint programming and combinatorial optimization"
readme = "README.md"
requires-python = ">=3.9"
license = "EUPL-1.2"
authors = [
    {name = "Alexis LE GOADEC", email = "alex@qaekwy.io"},
]
keywords = [
    "optimization", "constraint programming", "combinatorial optimization",
    "operations research", "constraint satisfaction", "constraint solver",
    "solver", "CSP", "optimization library", "optimization framework",
    "mathematical optimization", "discrete optimization", "optimization modeling",
    "constraint modeling", "declarative programming", "modeling language",
    "DSL", "define-and-solve", "scheduling", "routing", "planning",
    "resource allocation", "assignment", "decision support", "open source", "Python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests"
]

[project.optional-dependencies]
types = [
    "types-requests",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
    "pylint",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://qaekwy.io"
Documentation = "https://docs.qaekwy.io"
"Issue Tracker" = "https://github.com/alex-87/qaekwy-python/issues"
Source = "https://github.com/alex-87/qaekwy-python"

[tool.setuptools.dynamic]
version = {attr = "qaekwy.__metadata__.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["qaekwy*"]

[tool.pylint]
disable = ["R0801", "R0917", "R0913", "R0902", "R0903", "C0301", "R0911", "R0912"]
